--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "prepare": "husky install"
     },
     "author": "",
@@ -19,6 +19,7 @@
         "eslint-plugin-n": "^15.2.5",
         "eslint-plugin-promise": "^6.0.1",
         "husky": "^8.0.1",
+        "jest": "^29.2.1",
         "lint-staged": "^13.0.3",
         "prettier": "2.7.1"
     },
